--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,5 +1,5 @@
 .App {
-  
+ 
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 16px;
@@ -7,6 +7,8 @@
   }
   
   .Container {
+    display: flex;
+    justify-content: center;
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
@@ -14,3 +16,9 @@
     margin-left: auto;
     margin-right: auto;
   }
+
+  .loader {
+    display: flex;
+     align-items: center;
+    justify-content: center;
+    }
